--- a/src/Presentation/view/scss/main.scss
+++ b/src/Presentation/view/scss/main.scss
@@ -23,8 +23,12 @@ html {
 }
 
 body {
+    font-family: fantasy;
     padding: 0;
     margin: 0;
+    background-color: #f9f5ea;
+    background-size: 13px 13px, 29px 29px, 37px 37px, 53px 53px;
+    background-image: linear-gradient(90deg, rgba(255,255,255,.07) 50%, transparent 50%), linear-gradient(90deg, rgba(255,255,255,.13) 50%, transparent 50%), linear-gradient(90deg, transparent 50%, rgba(255,255,255,.17) 50%), linear-gradient(90deg, transparent 50%, rgba(255,255,255,.19) 50%);
 }
 
 .btn {
