fix: mobile header

--- a/src/Presentation/view/scss/main.scss
+++ b/src/Presentation/view/scss/main.scss
@@ -9,6 +9,8 @@
 
 html {
     &:root {
+        --color-shaddow-first: #f7c7f5;
+        --color-shaddow-second: #bef4f7;
         --primary-hue: 180deg; // default is 'cyan'
         --primary-color: hsl(var(--primary-hue), 72%, 24%);
         --secondary-color: hsl(var(--primary-hue), 95%, 42%);
@@ -23,7 +25,7 @@ html {
 }
 
 body {
-    font-family: fantasy;
+    font-family: MS Sans Serif, Geneva, sans-serif;
     padding: 0;
     margin: 0;
     background: url(../assets/bg-8-bit-nature.jpg) no-repeat center;
